package model;

public interface PieceObserver {
    void reactTo(Piece p);
}
