@startuml
/'=================================
  ===          MODEL            ===
  ================================='/
package model #8df2a8{
    abstract class Piece {
        - Integer color
        # Boolean isCapturable
        /' Mettre sur flèche : # List<Position> possibleMoves'/

        + Piece(color : Integer, position : Position)

        + addObserver(observer : PieceObserver) : void
        + removeObserver(observer : PieceObserver) : void
        + notifyObservers() : void

        + getColor() : Integer
        + getPosition() : Position
        + getIsCaptured() : Boolean
        + getState() : String
        + getPossibleMoves() : List<Position>
        + getPossibleCaptures() : List<Position>

        + move(coord : Position) : Boolean

        + setColor(color : Integer) : void
        + setPosition(position : Position) : void
        + setIsCaptured(isCaptured : Boolean) : void
        + setMove(plateau : Piece[][]) : void
        + setState(captures : List<Position>) : void
        + setCapture(plateau : Piece[][]) : void
    }

    class Position{
        - xPos : int
        - yPos : int

        + Position(x : int, y : int)

        + equals(p : Position) : Boolean

        + getX() : Integer
        + getY() : Integer

        + setPos(x : int, y : int) : void
    }

    class Queen{
        + Queen(color : Integer, position : Position)

        + setMove(plateau : Piece[][], coord : Position) : void

        - addMove(plateau : Piece[][], j : int, i : int) : Boolean
    }

    class Rook{
        + Rook(color : Integer, position : Position)

        + setMove(plateau : Piece[][]) : void

        - addMove(plateau : Piece[][], j : int, i : int) : Boolean
    }

    class Pawn{
        - Boolean isPromotable
        - Boolean firstMove

        + Pawn(color : Integer, position : Position)

        + move()(plateau : Piece[][], coord Position) : Boolean

        + getIsPromotable() : Boolean

        + setIsPromotable( isPromotable : Boolean) : void
        + setMove(plateau : Piece[][]) : void
    }

    class King{
        - String state

        + King(color : Integer, position : Position)

        + getState() : String

        + setState(captures : List<Position>) : void
        + setMove(plateau : Piece[][]) : void
    }

    class Bishop{
        + Bishop(color : Integer, position : Position)

        + setMove(plateau : Piece[][]) : void

        + addMove(plateau : Piece[][], j : int, i : int) : Boolean
    }

    class Knight{
        + Knight(color : Integer, position : Position)

        + setMove(plateau : Piece[][]) : void
    }

    interface PieceObserver{
        reactTo(Piece p) : void
    }

    interface ChessBoardObserver{
        reactTo(plateau Piece[][]) : void
    }
}
/'=================================
  ===        CONTROLLER         ===
  ================================='/
package controller #f28d97{
    class MainGame{
        - {static} Piece[][] plateau
        - {static} List<Position> currentMoves
        - {static} GameViewer board_view

        + {static} main(String args[]) : void

        + {static} addPiece(pieces : List<Piece>) : void
        + {static} movePiece(p : Piece, pos : Position) : void

        + {static} getPlateau() : Piece[][]
        + {static} getCurrentMoves() : List<Position>

        + {static} setCurrentMoves(moves : List<Position>) : void
        + {static} setCurrentPos(pos : Position) : void

    }

    class Player {
            - playerName : String
            - playerColor : Integer
            - listPiece : List<Piece>
            - deadPiece : List<Piece>

            + Joueur(playerName : String, playerColor : Integer)

            + getName() : String
            + getColor() : Integer
            + getAllPiece() : List<Piece>
            + getDeadPiece() : List<Piece>

            + initPiece() : void
            + removePiece(coord : Position)
        }
}
/'=================================
  ===           VIEW            ===
  ================================='/
package view #f2d48d{


    class GameViewer {
        - JButton[][] squares
        - JLabel[][] displayMoves
        - {static} String COLS

        + GameViewer()

        + displayPieces(plateau : Piece[][]) : void
        + resetDisplayPiece(plateau : Piece[][]) : void
        + resetDisplayMoves( displayMoves : JLabel[][]) : void

        + update() : void
        + setActions() : void

    }
}
/'=================================
  ===          LINKS            ===
  ================================='/

Position -d- Piece : use "# position : Position" <
Position -u-  MainGame : use "- currentPos : Position" <
Piece --u- MainGame : use "- plateau : Piece[][]" <
Position -  Piece : use "# position : Position" <
Position -  MainGame : use "- currentPos : Position" <
Piece - MainGame : use "- plateau : Piece[][]" <

MainGame -d- Player : use >
controller - Piece : manipulate >
GameViewer -- Piece : check >
GameViewer - MainGame : transmit data  >

Knight --* Piece
Piece *-- Pawn
Piece *-- Bishop
Piece *-- Rook
King --* Piece
Piece *-u- Queen


@enduml